--- a/style.css
+++ b/style.css
@@ -1,49 +1,76 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400');
+
+html {font-size: 100%;} /*16px*/
+
 body {
-	font-family: Montserrat;
+  background: white;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #000000;
+}
+
+p {margin-bottom: 1rem;}
+
+h1, h2, h3, h4, h5 {
+  margin: 3rem 0 1.38rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  line-height: 1.3;
 }
 
 h1 {
-	margin: 0;
-	padding: 0;
+  margin-top: 0;
+  font-size: 3.052rem;
 }
 
-.project .col img {
+h2 {font-size: 2.441rem;}
 
+h3 {font-size: 1.953rem;}
+
+h4 {font-size: 1.563rem;}
+
+h5 {font-size: 1.25rem;}
+
+small, .text_small {font-size: 0.8rem;}
+
+
+
+
+
+.project .col img {
+	height: 120px;
 	padding-right: 30px;
-    width:100vh;
 }
 
 .project {
 	display: flex;
 	justify-content: flex-start;
-	width: 45%;
+	width: 70%;
 	padding: 20px;
 	margin: 10px;
 	border-radius: 10px;
 	max-width: 700px;
 	border-bottom: 1px solid rgba(128, 128, 128, 0.2);
-    cursor:pointer;
-}
-.nolink{
-    cursor: auto;
-}
-.content {
 
+	cursor:pointer;
+	
+}
+
+.projects {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-
 }
 
 .top-container {
-	padding: 30px;
-	margin: 70px 70px 0px 70px;
+	padding: 0px;
+	margin: 5px 70px 0px 70px;
 }
 
 .intro-container {
-	margin-bottom: 50px;
+	margin-bottom: 0px;
 	display: flex;
 	align-items: flex-start;
 	justify-content: center;
@@ -92,6 +119,9 @@ h1 {
 }
 
 @media only screen and (max-width: 500px) {
+	.project {
+    width: 90%
+	}
 	.intro-container .image img {
 		margin-right: 50px;
 	}
@@ -105,24 +135,10 @@ h1 {
 	}
 }
 
-
-.section {
-    width:100vh;
+.projinfo{
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
-	align-items: left;
-}
-.title{
-    font-size: 30px;
-}
-
-.tab { 
-    margin-bottom: 0;
-    margin-left: 20px; 
-}
-.plus{
-    margin-left: 40px;
-}
+	align-items: center;
 
 
+}
