--- a/style/style.css
+++ b/style/style.css
@@ -17,10 +17,28 @@ a,table.table a {
 .profile {
 	vertical-align: middle;
 	width: 20%;
+    border-radius: 50%; /* Make the image circular */
+
 }
 
 
 .profile img {
 	width: 90%;
 	/* border-radius: 50%; */
+}
+
+body {
+    font-family: 'Cardo', serif;
+}
+strong {
+    font-weight: bold;
+}
+a {
+    color: #36454F;
+    text-shadow: 0px 0px 1px #888888;
+}
+
+/* Optional: Add styles for hover, active, and visited states */
+a:hover {
+    color: darkgrey;
 }
