--- a/style/style.css
+++ b/style/style.css
@@ -33,12 +33,19 @@ body {
 strong {
     font-weight: bold;
 }
+
+
 a {
-    color: #36454F;
-    text-shadow: 0px 0px 1px #888888;
+    color: #5585b5;
+    text-shadow: 0px 0px 1px #5585b5;
 }
 
 /* Optional: Add styles for hover, active, and visited states */
 a:hover {
     color: darkgrey;
+}
+
+.header_link {
+    color: #36454F;
+    text-shadow: 0px 0px 1px #888888;
 }
