--- a/style/style.css
+++ b/style/style.css
@@ -37,7 +37,7 @@ strong {
 
 a {
     color: #5585b5;
-    text-shadow: 0px 0px 1px #5585b5;
+    /* text-shadow: 0px 0px 1px #5585b5; */
 }
 
 /* Optional: Add styles for hover, active, and visited states */
